--- a/index.html
+++ b/index.html
@@ -3,11 +3,31 @@
   <head>
     <meta charset="utf-8">
     <title>Hiking Around San Diego</title>
-    <link rel="stylesheet" href="/assets/styles/main.min.scsss">
+    <link href="https://fonts.googleapis.com/css?family=Rock+Salt|Zilla+Slab" rel="stylesheet">
+    <link rel="stylesheet" href="./assets/styles/main.min.css">
   </head>
   <body>
 
-    <h1>Hello San Diego</h1>
+    <section id="landing-banner">
+      <div class="callout">
+        <h2>HIKING</h2>
+        <h1>San Diego</h1>
+        <h2>AROUND</h2>
+      </div>
+
+      <h3>coming soon...</h3>
+    </section>
 
   </body>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-81003885-8', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </html>
